@@ -2,7 +2,7 @@
 <!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <tree string="Customer Shipments">
-    <field name="code"/>
+    <field name="number"/>
     <field name="reference"/>
     <field name="planned_date"/>
     <field name="effective_date"/>
